# b2uqnD7MTWwh

./: README.md  article.ipynb  article.md  pyproject.toml  report.md  requirements.txt  skim-article-for-publishing.ipynb
.ipynb_checkpoints/: article-checkpoint.ipynb
script/: hw_entries_final.csv
