[project]
name = "reconstructing-eugeniana"
version = "0.1.0"
description = "Repo for submission of an article to the Journal of Digital History"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "jupyterlab-citation-manager>=1.0.0",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "thefuzz>=0.22.1",
    "tqdm>=4.67.1",
]
